--- a/index.html
+++ b/index.html
@@ -2170,7 +2170,8 @@
                             }));
                         }
                     });
-                    const supportsHtf = levelsHtf.filter(l => l.isSupport).sort((a,b) => a.distance - b.distance).slice(0, 10);
+                    // Change the line above to look like this:
+const supportsHtf = levelsHtf.filter(l => l.isSupport).sort((a,b) => a.distance - b.distance);
                     const resistancesHtf = levelsHtf.filter(l => !l.isSupport).sort((a,b) => a.distance - b.distance); // REMOVED .slice(0, 10)
                     summaryHtmlHtf = `
                         <div class="ema-summary-container">
