--- a/index.html
+++ b/index.html
@@ -476,11 +476,12 @@
             transform: scale(0.95);
             background-color: var(--header-bg);
         }
-        .sentiment-note-cell {
-            white-space: normal;
-            max-width: 250px;
-            font-size: 13px;
-        }
+/* Change the rule to this: */
+.sentiment-note-cell {
+    white-space: normal;
+    min-width: 350px; /* Changed from max-width and increased the value */
+    font-size: 13px;
+}
         #sentiment-receipts-table td:nth-child(2) {
             text-transform: capitalize;
             font-weight: bold;
