--- a/index.html
+++ b/index.html
@@ -2202,8 +2202,9 @@
                             }));
                         }
                     });
-                    const supportsClosestAll = levelsAll.filter(l => l.isSupport).sort((a,b) => a.distance - b.distance).slice(0, 10);
-                    const resistancesClosestAll = levelsAll.filter(l => !l.isSupport).sort((a,b) => a.distance - b.distance).slice(0, 10);
+                    // AFTER
+const supportsClosestAll = levelsAll.filter(l => l.isSupport).sort((a,b) => a.distance - b.distance);
+const resistancesClosestAll = levelsAll.filter(l => !l.isSupport).sort((a,b) => a.distance - b.distance);
 
                     // --- Data for Right Side: All Major S/R from HTF ---
                     const htfForSummary = ['daily', '4hour', '2hour'];
