--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
             <!-- BTC EMA Snapshot Section -->
             <div class="collapsible-section">
                 <div class="collapsible-header">
-                    <h2>BTC EMA Snapshot</h2>
+                    <h2>BTC EMAs</h2>
                     <button class="collapsible-toggle-btn">+</button>
                 </div>
                 <div class="collapsible-content">
@@ -1040,7 +1040,7 @@
             <!-- Tracker Scratchpad Section -->
             <div class="collapsible-section">
                 <div class="collapsible-header">
-                    <h2>Tracker Scratchpad</h2>
+                    <h2>Notes</h2>
                     <button class="collapsible-toggle-btn">+</button>
                 </div>
                 <div class="collapsible-content">
@@ -1059,7 +1059,7 @@
                 <div class="collapsible-content">
                     <div class="collapsible-content-inner">
                         <div id="asset-sentiment-container">
-                           <h4>Log New Sentiment 👀</h4>
+
                             <div class="sentiment-trackers-wrapper">
                                 <div class="sentiment-tracker" id="sentiment-tracker-btc">
                                     <h4>BTC/USDT</h4>
@@ -1079,7 +1079,7 @@
                                 </div>
                             </div>
                         </div>
-                        <h4 style="text-align:center; margin-top:30px;">Sentiment History</h4>
+
                         <div class="table-wrapper">
                             <table id="sentiment-receipts-table">
                                 <thead>
@@ -1102,7 +1102,7 @@
             <!-- CHART LIBRARY 2 SECTION -->
             <div class="collapsible-section">
                  <div class="collapsible-header">
-                    <h2>Chart Library 2.0</h2>
+                    <h2>Charts</h2>
                     <button class="collapsible-toggle-btn">+</button>
                 </div>
                 <div class="collapsible-content">
@@ -1126,7 +1126,7 @@
             <!-- IMAGE LIBRARY SECTION -->
             <div class="collapsible-section">
                 <div class="collapsible-header">
-                    <h2>Chart Library (Legacy)</h2>
+                    <h2>Misc</h2>
                     <button class="collapsible-toggle-btn">+</button>
                 </div>
                 <div class="collapsible-content">
