--- a/index.html
+++ b/index.html
@@ -2230,13 +2230,14 @@ const resistancesClosestAll = levelsAll.filter(l => !l.isSupport).sort((a,b) => 
                         tableRowsHtml += '<tr><td colspan="4" style="text-align:center; color: var(--green-text);">No Support Levels Found</td></tr>';
                     } else {
                         // AFTER
+// AFTER
 for (let i = 0; i < maxSupportRows; i++) {
     const supClosest = supportsClosestAll[i];
     const supHtf = supportsHtfAll[i];
     tableRowsHtml += `<tr>
-        <td>${supClosest ? supClosest.label : '---'}</td>
+        <td style="color: var(--text-color);">${supClosest ? supClosest.label : '---'}</td>
         <td style="color: var(--green-text);">${supClosest ? Math.round(supClosest.value).toLocaleString() : '---'}</td>
-        <td>${supHtf ? supHtf.label : '---'}</td>
+        <td style="color: var(--text-color);">${supHtf ? supHtf.label : '---'}</td>
         <td style="color: var(--green-text);">${supHtf ? Math.round(supHtf.value).toLocaleString() : '---'}</td>
     </tr>`;
 }
@@ -2249,13 +2250,14 @@ for (let i = 0; i < maxSupportRows; i++) {
                          tableRowsHtml += '<tr><td colspan="4" style="text-align:center; color: var(--red-text);">No Resistance Levels Found</td></tr>';
                     } else {
                         // AFTER
+// AFTER
 for (let i = 0; i < maxResistanceRows; i++) {
     const resClosest = resistancesClosestAll[i];
     const resHtf = resistancesHtfAll[i];
     tableRowsHtml += `<tr>
-        <td>${resClosest ? resClosest.label : '---'}</td>
+        <td style="color: var(--text-color);">${resClosest ? resClosest.label : '---'}</td>
         <td style="color: var(--red-text);">${resClosest ? Math.round(resClosest.value).toLocaleString() : '---'}</td>
-        <td>${resHtf ? resHtf.label : '---'}</td>
+        <td style="color: var(--text-color);">${resHtf ? resHtf.label : '---'}</td>
         <td style="color: var(--red-text);">${resHtf ? Math.round(resHtf.value).toLocaleString() : '---'}</td>
     </tr>`;
 }
