--- a/index.html
+++ b/index.html
@@ -3692,7 +3692,8 @@ for (let i = 0; i < maxResistanceRows; i++) {
                 autoResizeTextarea(DOM.trackerScratchpadEl);
 
                 // Auto-open specific sections
-                const sectionsToOpen = ['Live Trades', 'Sentiment Log', 'Add New Trade', 'Tracker Scratchpad'];
+                // AFTER
+const sectionsToOpen = ['Live Trades', 'Sentiment Log', 'Add New Trade', 'Notes'];
                 document.querySelectorAll('.collapsible-header h2').forEach(h2 => {
                     if (sectionsToOpen.includes(h2.textContent.trim())) {
                         const section = h2.closest('.collapsible-section');
