--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
                 <div class="collapsible-header">
                     <h2>Sentiment Log</h2>
                     <button class="collapsible-toggle-btn">+</button>
-                </div>
+       
                 <div class="collapsible-content">
                     <div class="collapsible-content-inner">
                         <div id="asset-sentiment-container">
@@ -1078,7 +1078,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>         
 
                         <div class="table-wrapper">
                             <table id="sentiment-receipts-table">
@@ -1097,7 +1097,7 @@
                         <button id="toggle-old-sentiments" class="toggle-history-btn">Show All</button>
                     </div>
                 </div>
-            </div>
+            </div></div>
 
             <!-- CHART LIBRARY 2 SECTION -->
             <div class="collapsible-section">
