--- a/index.html
+++ b/index.html
@@ -1050,18 +1050,17 @@
                 </div>
             </div>
 
-            <!-- Sentiment Log Section -->
+               <!-- Sentiment Log Section -->
             <div class="collapsible-section">
                 <div class="collapsible-header">
                     <h2>Sentiment Log</h2>
                     <button class="collapsible-toggle-btn">+</button>
-       </div>
-
+                </div>
                 <div class="collapsible-content">
                     <div class="collapsible-content-inner">
                         <div id="asset-sentiment-container">
-
-                            <div class="sentiment-trackers-wrapper">
+                            <!-- Title removed, and margin-top override added to the div below -->
+                            <div class="sentiment-trackers-wrapper" style="margin-top: 0;">
                                 <div class="sentiment-tracker" id="sentiment-tracker-btc">
                                     <h4>BTC/USDT</h4>
                                     <div class="sentiment-buttons">
@@ -1079,8 +1078,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>         
-
+                        </div>
+                        <h4 style="text-align:center; margin-top:30px;">Sentiment History</h4>
                         <div class="table-wrapper">
                             <table id="sentiment-receipts-table">
                                 <thead>
