--- a/index.html
+++ b/index.html
@@ -2816,9 +2816,10 @@ for (let i = 0; i < maxResistanceRows; i++) {
                     if (e.target.id === 'toggle-old-trades') toggleHistoricalRows('completed-trades-tbody', e.target);
                 });
 
-                DOM.trackerScratchpadEl.addEventListener('input', () => {
-                    autoResizeTextarea(DOM.trackerScratchpadEl);
-                    saveTrackerScratchpad();
+                               // <<< ADD THIS EVENT LISTENER
+                DOM.tradeRemindersScratchpadEl.addEventListener('input', () => {
+                    autoResizeTextarea(DOM.tradeRemindersScratchpadEl);
+                    saveTradeReminders();
                 });
 
                 DOM.tradeRemindersScratchpadEl.addEventListener('input', () => {
